Second commit für Standort und Terms and Policy

--- a/react-js-login-registration-hooks-master/src/standort.css
+++ b/react-js-login-registration-hooks-master/src/standort.css
@@ -3,6 +3,9 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    background-image: url('https://images.pexels.com/photos/1078850/pexels-photo-1078850.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    background-size: cover;
+    background-position: auto;
   }
   
   .state {
@@ -28,4 +31,5 @@
   .city {
     margin-bottom: 5px;
   }
+  
   
