--- a/react-js-login-registration-hooks-master/src/Move.css
+++ b/react-js-login-registration-hooks-master/src/Move.css
@@ -1,7 +1,7 @@
 .kard {
     width: 100%;
     height: 100vh;
-    background-image: url('https://media.discordapp.net/attachments/1099031784185933915/1125089286723739718/PHOTO-2023-05-21-09-02-14.jpg?width=1464&height=976');
+    background-image: url('https://media.discordapp.net/attachments/1111363093776314529/1126490249095303188/LEND_MOVE_logo_1-1-removebg.png?width=976&height=976');
     background-size: cover;
     background-position: auto;
     display: flex;
